[package]
name = "rustychroma"
version = "0.2.0"
edition = "2024"
description = "High-performance chroma key background removal and edge erosion"
autotests = false
license = "MIT"
repository = "https://github.com/t7ru/rustychroma"
readme = "README.md"
keywords = ["chroma-key", "green-screen", "background-removal", "edge-erosion"]
categories = ["multimedia::video", "multimedia::images"]

[dependencies]
rayon = { version = "1.11", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
divan = "0.1.21"
png = "0.18"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
parallel = ["dep:rayon"]
wasm = ["dep:wasm-bindgen"]
c-api = []

[profile.release]
lto           = true
codegen-units = 1
panic         = "abort"

[[test]]
name = "tests"
path = "tests/tests.rs"

[[bench]]
name = "benches"
path = "tests/benches.rs"
harness = false
